--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 <body>
 
 <header>
-    <img src="profile.jpg" alt="Talha Amin">
+    <img src="profile.jpeg" alt="Talha Amin">
     <h1>Talha Amin</h1>
-    <p>Data Scientist | Business Analytics | Statistical Modeling</p>
+    <p>Data Scientist | Business Analytics | Data Analytics</p>
     <a class="btn" href="resume.pdf" target="_blank">Download Resume</a>
 </header>
 
 <section>
     <h2>About Me</h2>
     <p>
-        MS Business Analytics candidate at UC Davis (GPA 3.93) with a Mechanical Engineering background.
-        I specialize in statistical modeling, machine learning, forecasting, and data-driven decision support.
-        Experienced in both infrastructure analytics and marketing optimization.
+        I am an MS in Business Analytics candidate at UC Davis with a Mechanical Engineering foundation and experience spanning infrastructure analytics, industrial systems, and marketing optimization.
+        My work sits at the intersection of physical systems and data systems — building statistical models, automating ETL pipelines, and applying machine learning to translate complex operational environments into structured, decision-ready insights.
+        As a startup co-founder, I led data-driven marketing initiatives that increased revenue by 25% and scaled the customer base by 40% through segmentation and A/B testing. In parallel, my experience in industrial manufacturing and infrastructure analytics strengthened my ability to analyze reliability, performance drivers, and large-scale system efficiency.
+        I focus on building statistically rigorous, reproducible models that bridge analytics and execution — turning data into measurable business impact.
     </p>
 </section>
 
@@ -44,7 +45,7 @@
     </div>
 
     <div class="card">
-        <h3>Engineering Intern – FFBL</h3>
+        <h3>Engineering Intern – Fuaji Fertilizer Bin Qasim Limited</h3>
         <p>
             Analyzed plant operations, maintenance cycles, and asset reliability in large-scale industrial
             manufacturing environments, strengthening operational and process analytics capabilities.
@@ -70,7 +71,7 @@
             Developed regression models (linear, interaction, log specifications) with full diagnostics
             to identify key sales drivers and build an integrated forecasting model explaining ~92% of sales variation.
         </p>
-        <a href="https://github.com/yourusername/ecommerce-sales-drivers-regression" target="_blank">
+        <a href="https://github.com/talha-amin123/advanced-regression-modeling" target="_blank">
             View Project →
         </a>
     </div>
@@ -81,6 +82,9 @@
             Analyzed randomized digital ad experiments using statistical hypothesis testing and ROI evaluation
             to guide budget allocation decisions.
         </p>
+        <a href="https://github.com/talha-amin123/digital-advertising-experiment" target="_blank">
+            View Project →
+        </a>
     </div>
 
 </section>
@@ -98,8 +102,8 @@
     <h2>Contact</h2>
     <p>Email: your.email@example.com</p>
     <p>
-        <a href="https://github.com/yourusername">GitHub</a> |
-        <a href="https://linkedin.com/in/yourlinkedin">LinkedIn</a>
+        <a href="https://github.com/talha-amin123">GitHub</a> |
+        <a href="https://www.linkedin.com/in/taamin/">LinkedIn</a>
     </p>
 </section>
 
